# fp-samples

c++/: .gitignore  meson.build  rbtree-set.cpp
haskell/data-structures/: .gitignore  data-structures.cabal  package.yaml  stack.yaml
haskell/data-structures/app/: Main.hs
haskell/data-structures/src/: DependentTypes.hs  Interpreter.hs  Lib.hs
haskell/types/: .gitignore  types.cabal
idris-2/: Makefile  fp-samples.ipkg
idris-2/src/: Category.idr  FirstInterviewInterpreter.idr  FunctionsAndRelations.idr  List.idr
subjective-propagating-intuitionistic-logic/: spil.nb
