cabal-version: 3.4
name: types
version: 0.1
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    Types
  ghc-options:
    -fplugin=LiquidHaskell
  build-depends:
    liquidhaskell >= 0.8.10 && < 0.8.12,
    liquid-base >= 4.14.0 && < 4.14.2,
    liquid-containers >= 0.6.2.1 && < 0.6.3,
    liquid-prelude >= 0.8.10 && < 0.8.12,
    liquid-fixpoint >= 0.8.10 && < 0.8.13,
    liquid-vector >= 0.12.1 && < 0.13.0,
    liquid-ghc-prim >= 0.6.1 && < 0.6.2,
    liquid-bytestring >= 0.10.10 && < 0.10.12,
    liquid-parallel >= 3.2.2 && < 3.2.3
